2003-04-22  Martin Blom  <martin@blom.org>

	* void.audio: This example driver can now be compiled using gcc
	and builds for all targets (m68k-amigaos, ppc-morphos,
	i?86be-amithlon and i386-aros).

2003-04-18  Martin Blom  <martin@blom.org>

	* AHI: If no mode is available, the "Play a test sound" button is
	disabled.

2003-04-17  Martin Blom  <martin@blom.org>

	* Ported AHI to AROS.

	* The device and preference program are now endian aware when
	reading IFF files.

2003-04-13  Martin Blom  <martin@blom.org>

	* ahi.device: For some weired reason I apparently disabled
	PreTimer()/PostTimer() support (aka the CPU overload protection)
	in version 5.29. Now it's enabled again.

2003-04-12  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.33.

	* ahi.device: The audio mode requester now resizes to its minimum
	width if asked to open a smaller window. Before, it just failed
	to open.

	* ahi.device: The audio mode requester now uses the ASL
	preferences if available (requires asl.library V45 or
	later). [Todd A. Oberly]

	* ahi.device (AudioRequestA): AHIR_PrivateIDCMP is now honored
	even if AHIR_Screen or AHIR_PubScreenName is provided.

	* PlayTest: I finally fixed the bug that could make the example
	call DeleteIORequest() on a pointer obtained from AllocMem().

	* Released ahi.device 5.32.

	* ahi.deivce: io_Actual is now valid even if a CMD_READ or
	CMD_WRITE request failed or was aborted. [Grzegorz Kraszewski]

	* ahi.doc: Don't mention io_Actual for CMD_STOP/CMD_START.

	* ahi.device: gw_IndexToFrequency in the MorphOS version now uses
	d0/a1 for arguments instead of the stack. [Patch from Harry
	Sintonen]

	* Released paula.audio 4.29.

	* paula.audio: Small cleanup here and there. [Patch from Harry
	Sintonen]

	* paula.audio: Library cleanup didn't free resources at
	failure. Fixed. [Patch from Harry Sintonen]

	* paula.audio: DMA playback did CloseDevice with a0 =
	p_TimerReq. Fixed. [Patch from Harry Sintonen]
